# cs791v

./: .hgignore  02-PA0-Hello-CUDA.pptx  CMakeLists.txt  README.md  check_pid_then_email.py
pa1/: CMakeLists.txt
pa1/include/: add.h
pa1/report/: assignment1.aux  assignment1.tex  assignment1.tex.backup
pa1/scripts/: batchrun.sh  data_100000000_gpu_nostride.txt  data_100000000_gpu_stride.txt  data_10000000_gpu_nostride.txt  data_10000000_gpu_stride.txt  data_1000000_gpu_nostride.csv  data_1000000_gpu_nostride.ods  data_1000000_gpu_stride.txt  plot_data.py  surface3d_demo.py
pa1/src/: add-experiment.cu  add.cu  hellocuda.cu
pa2/: CMakeLists.txt
pa2/include/: README.md  sum.h
pa2/report/: FraserLuke.tex  README.md  graphs.ods
pa2/scripts/: README.md  data.sh  data.txt
pa2/src/: README.md  prefix_sum.cu  sum.cu
pa3/: CMakeLists.txt  FraserLuke.tex  data.ods
pa3/include/: mandelbrot_gpu.h
pa3/script/: data.sh
pa3/src/: mandelbrot.cu  mandelbrot_gpu.cu
pa4/: CMakeLists.txt  Makefile
pa4/include/: vector_sum.h
pa4/report/: FraserLukePa4.tex  bare_conf.tex
pa4/script/: Data Analysis - Static Data.csv  data.sh  data.txt  graphing.py
pa4/src/: vector_sum.cc  vector_sum.cu  vector_tests.cc  vector_tests.cu
project/src/scripts/: buildMocapFileListFromDir.m  download_cmu_data.py  greedySkeletonSubset.m  normalizedSkeletonAnimation.m
